--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "admin-lte": "^3.0.1",
         "moment": "^2.24.0",
         "sweetalert2": "^9.10.8",
+        "v-markdown-editor": "^1.2.4",
         "vform": "^1.0.1",
         "vue-router": "^3.1.6",
         "vuex": "^3.1.3"
